# yookassa-rs

./: Cargo.toml  README.md
examples/: create.rs  main.rs
src/: auth.rs  client.rs  error.rs  lib.rs
src/api/: client.rs  mod.rs
src/data/: amount.rs  confirmation.rs  mod.rs  payment.rs
src/model/: amount.rs  confirmation.rs  create_payment.rs  mod.rs  payment.rs  recipient.rs
tests/: builder.rs
